feat: improve agent query contracts and skill scenes